kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dota-shuffle
  labels:
    environment: production
