kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: dota-shuffle
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dota-shuffle
  template:
    metadata:
      labels:
        app: dota-shuffle
    spec:
      containers:
      - name: dota-shuffle-container
        image: luis122448/dota-shuffle-frontend:v1.0.0
        ports:
        - containerPort: 4000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
