kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dota-shuffle-frontend-service
  namespace: dota-shuffle
spec:
  type: ClusterIP
  selector:
    app: dota-shuffle
  ports:
    - protocol: TCP
      port: 4203
      targetPort: 4000
