kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dota-shuffle-frontend-ingress
  namespace: dota-shuffle
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app.kubernetes.io/name: dota-shuffle
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: dota-shuffle-luis122448-com-suite
spec:
  ingressClassName: nginx
  rules:
    - host: "dota-shuffle.luis122448.com"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: dota-shuffle-frontend-service
              port:
                number: 4203
  tls:
    - hosts:
      - dota-shuffle.luis122448.com
      secretName: dota-shuffle-tls
